--- a/code/client/index.html
+++ b/code/client/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=0" />
     <title>特斯拉</title>
+    <link rel="icon" type="image/x-icon" href="/static/favorite.ico"/>
 </head>
 <body>
     <div id="app"></div>
